--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,125 @@
-.App {
+.d-flex {
+  display: flex;
+}
+.column {
+  flex-direction: column;
+}
+
+input {
+  width: 400px;
+  padding: 10px;
+  margin: 5px;
+}
+
+button {
+  margin: 10px 5px;
+  width: 100px;
+  padding: 10px;
+  background-color: rgb(95, 94, 94);
+  font-weight: bold;
+  border: none;
+  border-radius: 20px;
+  color: rgb(224, 224, 224);
+}
+
+.justify-center {
+  justify-content: center;
+}
+.align-center {
+  align-items: center;
+}
+.grow1 {
+  flex: 1;
+}
+.grow2 {
+  flex: 2;
+}
+.mt-50 {
+  margin-top: 50px;
+}
+
+.space-ev {
+  justify-content: space-evenly;
+}
+
+button:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+}
+
+.wrap {
+  flex-wrap: wrap;
+}
+.m-20 {
+  margin: 20px;
+}
+.pad-10 {
+  padding: 10px;
+}
+.img {
+  width: 95%;
+  height: 400px;
+  margin: 5px;
+}
+.variantsImg2 {
+  width: 76px;
+  margin: 5px;
+  border: solid 2px transparent;
+}
+.variantsImg {
+  width: 80px;
+  margin: 5px;
+}
+.variantsImg2:hover {
+  border: solid 2px rgb(56, 56, 56);
+  cursor: pointer;
+}
+.stars {
+  height: 15px;
+  width: 15px;
+}
+.box {
+  border: solid 1px grey;
+  margin: 5px;
+  padding: 5px;
+  background-color: rgba(255, 255, 255, 0.404);
+}
+.text-center {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* loader */
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
 }
-
-.App-link {
-  color: #61dafb;
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
 }
-
-@keyframes App-logo-spin {
-  from {
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
 }
